--- a/Star/Login/Login.storyboard
+++ b/Star/Login/Login.storyboard
@@ -679,7 +679,7 @@
                                                         <rect key="frame" x="223" y="0.0" width="92" height="44"/>
                                                         <state key="normal" title="获取验证码"/>
                                                         <connections>
-                                                            <action selector="fetchCodeWord:" destination="6Wm-6n-uSw" eventType="touchDragInside" id="Tia-Mz-XJ2"/>
+                                                            <action selector="fetchCodeWord:" destination="6Wm-6n-uSw" eventType="touchUpInside" id="Xcl-T6-fwr"/>
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g7W-AN-XhQ" userLabel="Line2">
