--- a/Star/Main/View/My/MyCell.xib
+++ b/Star/Main/View/My/MyCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="400" height="288.66666666666669"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="portrait_default" translatesAutoresizingMaskIntoConstraints="NO" id="cVP-lv-LSR">
+                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="portrait_default" translatesAutoresizingMaskIntoConstraints="NO" id="cVP-lv-LSR">
                         <rect key="frame" x="160" y="88" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="80" id="4S9-c2-Fmz"/>
@@ -27,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oVM-TN-knj">
-                        <rect key="frame" x="211.33333333333334" y="183.66666666666666" width="30" height="30"/>
+                        <rect key="frame" x="213.66666666666666" y="185" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="JhK-t3-RtK"/>
                             <constraint firstAttribute="width" constant="30" id="dXA-0q-fC8"/>
@@ -35,25 +35,34 @@
                         <state key="normal" image="iconPencel"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昵称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cl1-MF-E33">
-                        <rect key="frame" x="171.66666666666666" y="188" width="34.666666666666657" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="169.66666666666666" y="188" width="39" height="23"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dj-Fr-GCf">
+                        <rect key="frame" x="184" y="235.33333333333334" width="33" height="15.666666666666657"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.5568627451" green="0.78039215689999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
+                    <constraint firstItem="2dj-Fr-GCf" firstAttribute="top" secondItem="oVM-TN-knj" secondAttribute="bottom" constant="20" id="4HX-6A-jWM"/>
                     <constraint firstItem="cl1-MF-E33" firstAttribute="centerX" secondItem="VzP-XV-l84" secondAttribute="centerX" constant="-11" id="BfX-Nf-37b"/>
                     <constraint firstItem="oVM-TN-knj" firstAttribute="centerY" secondItem="cl1-MF-E33" secondAttribute="centerY" id="D1t-tk-CSc"/>
                     <constraint firstItem="cVP-lv-LSR" firstAttribute="centerX" secondItem="VzP-XV-l84" secondAttribute="centerX" id="TS9-A0-EsG"/>
                     <constraint firstItem="cVP-lv-LSR" firstAttribute="top" secondItem="VzP-XV-l84" secondAttribute="top" constant="88" id="W1Z-AY-cNw"/>
                     <constraint firstItem="oVM-TN-knj" firstAttribute="leading" secondItem="cl1-MF-E33" secondAttribute="trailing" constant="5" id="XDN-Y5-YT0"/>
+                    <constraint firstItem="2dj-Fr-GCf" firstAttribute="centerX" secondItem="VzP-XV-l84" secondAttribute="centerX" id="f2Y-Tl-iph"/>
                     <constraint firstItem="cl1-MF-E33" firstAttribute="top" secondItem="cVP-lv-LSR" secondAttribute="bottom" constant="20" id="gy5-XL-O9L"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="editButton" destination="oVM-TN-knj" id="fRM-WT-dta"/>
                 <outlet property="nickNameLabel" destination="cl1-MF-E33" id="WJi-OG-l20"/>
+                <outlet property="rankLabel" destination="2dj-Fr-GCf" id="wHA-JM-mwW"/>
                 <outlet property="topConstraint" destination="W1Z-AY-cNw" id="JYy-m5-coG"/>
                 <outlet property="userImageView" destination="cVP-lv-LSR" id="M0a-1y-Q2X"/>
             </connections>
