删除测试资源

--- a/Star/Main/View/Article/CommentCell.xib
+++ b/Star/Main/View/Article/CommentCell.xib
@@ -61,7 +61,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFB-jk-dF1">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFB-jk-dF1">
                         <rect key="frame" x="65" y="85.5" width="40" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="38k-rW-K1R"/>
