--- a/Star/Login/Login.storyboard
+++ b/Star/Login/Login.storyboard
@@ -298,7 +298,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="真实姓名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N67-B8-gSY">
-                                                    <rect key="frame" x="24" y="0.0" width="65" height="43.5"/>
+                                                    <rect key="frame" x="20" y="0.0" width="65" height="43.666666666666664"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="65" id="wnj-Pr-Twe"/>
                                                     </constraints>
@@ -307,7 +307,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写您的真实姓名" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SGE-qH-xsO">
-                                                    <rect key="frame" x="99" y="0.0" width="481" height="43.5"/>
+                                                    <rect key="frame" x="95" y="0.0" width="260" height="43.666666666666664"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -316,7 +316,7 @@
                                                     </connections>
                                                 </textField>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rhp-Ni-RES">
-                                                    <rect key="frame" x="0.0" y="43" width="600" height="0.5"/>
+                                                    <rect key="frame" x="0.0" y="43" width="375" height="0.6666666666666643"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="0.5" id="erf-2c-kMp"/>
@@ -345,7 +345,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="身份证号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Enz-YS-xow">
-                                                    <rect key="frame" x="24" y="0.0" width="65" height="44"/>
+                                                    <rect key="frame" x="20" y="0.0" width="65" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="65" id="HF2-KR-ufV"/>
                                                     </constraints>
@@ -354,7 +354,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写您的身份证号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gLe-ZN-sHi">
-                                                    <rect key="frame" x="99" y="0.0" width="481" height="43.5"/>
+                                                    <rect key="frame" x="95" y="0.0" width="260" height="43.666666666666664"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -363,7 +363,7 @@
                                                     </connections>
                                                 </textField>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ewW-8p-R0S">
-                                                    <rect key="frame" x="0.0" y="43.5" width="600" height="0.5"/>
+                                                    <rect key="frame" x="0.0" y="43.666666666666664" width="375" height="0.3333333333333357"/>
                                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="0.5" id="Ekd-pW-Dll"/>
@@ -392,7 +392,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="身份证正面照" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6GK-gn-2vm">
-                                                    <rect key="frame" x="24" y="0.0" width="100" height="80"/>
+                                                    <rect key="frame" x="20" y="0.0" width="100" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="7Dy-Nf-Tmq"/>
                                                     </constraints>
@@ -401,14 +401,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView tag="10" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="hSh-Ub-6lE">
-                                                    <rect key="frame" x="144" y="10" width="60" height="60"/>
+                                                    <rect key="frame" x="140" y="10" width="60" height="60"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="62c-W2-7Vk"/>
                                                         <constraint firstAttribute="width" constant="60" id="NWy-ha-41s"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uv6-Qe-k6g">
-                                                    <rect key="frame" x="0.0" y="79.5" width="600" height="0.5"/>
+                                                    <rect key="frame" x="0.0" y="79.666666666666671" width="375" height="0.3333333333333286"/>
                                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="0.5" id="3P2-l9-DqY"/>
@@ -435,7 +435,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="身份证背面照" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQV-eW-2Ch">
-                                                    <rect key="frame" x="24" y="0.0" width="100" height="80"/>
+                                                    <rect key="frame" x="20" y="0.0" width="100" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="a62-ri-xE4"/>
                                                     </constraints>
@@ -444,14 +444,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView tag="11" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="omw-0G-mxn">
-                                                    <rect key="frame" x="144" y="10" width="60" height="60"/>
+                                                    <rect key="frame" x="140" y="10" width="60" height="60"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="f9n-IA-ySU"/>
                                                         <constraint firstAttribute="width" constant="60" id="ljy-a9-yr9"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W6g-i2-VVa">
-                                                    <rect key="frame" x="0.0" y="79.5" width="600" height="0.5"/>
+                                                    <rect key="frame" x="0.0" y="79.666666666666671" width="375" height="0.3333333333333286"/>
                                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="0.5" id="u5P-Mm-d5H"/>
@@ -478,19 +478,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="《征信数据采集及信息查询授权书》" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqB-bI-RiW">
-                                                    <rect key="frame" x="197.5" y="31" width="245" height="18"/>
+                                                    <rect key="frame" x="85" y="31" width="245" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.39946720460000001" green="0.60794903079999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="同意" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dAG-tM-8Tg">
-                                                    <rect key="frame" x="166.5" y="0.0" width="31" height="80"/>
+                                                    <rect key="frame" x="54" y="0.0" width="31" height="80"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VrF-Kr-v0S">
-                                                    <rect key="frame" x="144.5" y="30.5" width="20" height="20"/>
+                                                    <rect key="frame" x="32" y="30.666666666666671" width="20" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="20" id="2i2-d0-LKz"/>
                                                         <constraint firstAttribute="height" constant="20" id="Z7Q-Qy-Vqw"/>
@@ -520,7 +520,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRM-GG-GgQ">
-                                                    <rect key="frame" x="30" y="74.5" width="540" height="44"/>
+                                                    <rect key="frame" x="30" y="74.666666666666671" width="315" height="44"/>
                                                     <color key="backgroundColor" red="0.39946720460000001" green="0.60794903079999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="B66-ef-eq6"/>
@@ -1045,6 +1045,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="P4v-m0-CeM"/>
-        <segue reference="tjv-bG-SCX"/>
+        <segue reference="LMH-1d-0lt"/>
     </inferredMetricsTieBreakers>
 </document>
